<resources>
    <string name="app_name">SwissotelChicago</string>
    <string name="swissotel_circle_url">https://www.swissotel.com/circle/#</string>
    <string name="profile_button">MY PROFILE</string>
    <string name="book_button">BOOK NOW</string>
    <string name="swissotel">Swissotel Chicago</string>
    <string name="large_text">cjh,dxfhgvnkdbjfcfnjb cgn</string>
    <string name="home_button">HOME</string>
    <string name="meeting_rooms">MEETING AND EVENT ROOMS</string>
    <string name="guest_rooms">GUEST ROOMS</string>
    <string-array name="hoteldetails">

        <item>HOTEL DETAILS</item>
        <item>OVERVIEW</item>
        <item>ACCOMMODATION</item>
        <item>EXPLORE HOTEL</item>
        <item>DINING</item>
        <item>MEETINGS &amp; EVENTS</item>
        <item>PROMOTIONS</item>
    </string-array>
    <string name="hotel_details">HOTEL DETAILS</string>
    <string name="overview">OVERVIEW</string>
    <string name="accommodation">ACCOMMODATIONS</string>
    <string name="explore_chicago">EXPLORE CHICAGO</string>
    <string name="dining">DINING</string>
    <string name="meetings">MEETINGS &amp; EVENTS</string>
    <string name="promos">PROMOTIONS</string>
    <string name="photos_api_link">http://apistage.swissotel.com/hotels/chicago/media/photos/</string>
    <string name="local_guide_api_link">http://apistage.swissotel.com/hotels/chicago/explore-hotel/local-guide/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo">PhotoActivity</string>


</resources>
