<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ericaschulz.swissotelchicago.MainActivity"
    android:background="@color/colorBg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/swiss_lobby"
        android:src="@drawable/swissotel_lobby"
        android:layout_above="@+id/swiss_logo"
        android:layout_alignParentEnd="true" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swiss_logo"
        android:src="@drawable/swissotel_logo"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/book_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_button"
        android:id="@+id/book_button"
        android:background="@drawable/button_border"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/profile_button"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_button"
        android:id="@+id/profile_button"
        android:background="@drawable/button_border"
        android:textColor="#ffffff"
        android:layout_below="@+id/swiss_logo"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accommodation"
        android:id="@+id/acc_button"
        android:background="@drawable/button_border"
        android:textColor="#ffffff"
        android:layout_below="@+id/expl_button"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_hotel"
        android:id="@+id/expl_button"
        android:background="@drawable/button_border"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/book_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meetings"
        android:textColor="#ffffff"
        android:id="@+id/meetings_btn"
        android:background="@drawable/button_border"
        android:layout_below="@+id/dining_btn"
        android:layout_alignStart="@+id/acc_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promos"
        android:textColor="#ffffff"
        android:id="@+id/promo_btn"
        android:background="@drawable/button_border"
        android:layout_below="@+id/dining_btn"
        android:layout_alignEnd="@+id/expl_button"
        android:layout_marginTop="52dp" />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="New Button"-->
        <!--android:textColor="#ffffff"-->
        <!--android:id="@+id/button3"-->
        <!--android:background="@drawable/button_border"-->
        <!--android:layout_below="@+id/expl_button"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginBottom="5dp"/>-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dining"
        android:textColor="#ffffff"
        android:id="@+id/dining_btn"
        android:gravity="center"
        android:background="@drawable/button_border"
        android:layout_below="@+id/acc_button"
        android:layout_centerHorizontal="true" />


    <!--<Spinner-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/button_border"-->
        <!--android:id="@+id/spinner1"-->
        <!--android:layout_below="@+id/book_button"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:entries="@array/hoteldetails">-->
    <!--</Spinner>-->



</RelativeLayout>
